updating to not let level 3 price books be edited. If price book name is just the number it will update with buyer group name

--- a/force-app/main/default/classes/omsPricingTool.cls
+++ b/force-app/main/default/classes/omsPricingTool.cls
@@ -1,7 +1,9 @@
 public class omsPricingTool {
     @AuraEnabled
-    public static string pricebookFound(string pbId, list<CartItem> prods){
+    public static string pricebookFound(string pbId, list<CartItem> prods, string pbName){
         string messBack;
+        string newName = pbName; 
+      
         map<id, CartItem> product = new map<id, CartItem>();
         list<pricebookentry> toUpsert = new list<pricebookentry>(); 
         try{
@@ -28,7 +30,12 @@ public class omsPricingTool {
                 }
                  
             }
-            upsert toUpsert; 
+            upsert toUpsert;
+            if(!String.isBlank(newName)){
+                 list<Pricebook2> pb = [select id, name from Pricebook2 where id =: pbId];
+                pb[0].Name = newName; 
+                update pb; 
+            }
             messBack= 'success';
         }catch(exception e){
             messBack = String.valueOf(e);
